syntax = "proto3";
package ssc.chainlet;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "ssc/chainlet/chainlet_params.proto";

option go_package = "github.com/sagaxyz/ssc/x/chainlet/types";

enum Status {
  STATUS_OFFLINE = 0;
  STATUS_ONLINE = 1;
}

message Chainlet {
  google.protobuf.Timestamp spawnTime = 1
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
  string launcher = 2;
  repeated string maintainers = 3;
  string chainletStackName = 4; //TODO rename to stackName
  string chainletStackVersion = 5; //TODO rename to stackVersion
  string chainId = 6;
  string chainletName = 7; //TODO rename to name
  string denom = 8;
  ChainletParams params = 9 [ (gogoproto.nullable) = false ];
  Status status = 10;
  bool autoUpgradeStack = 11;
  repeated string genesisValidators = 12;
  repeated string tags = 13;
  bool isServiceChainlet = 14;
  bool isCCVConsumer = 15;
  Upgrade upgrade = 16;
  string genesisStackVersion = 17;
  string consumerId = 18;
}

message Upgrade {
  uint64 height = 1;
  string version = 2;
}
message UpgradingChainlet {}

message PendingInit {}
