syntax = "proto3";

package ssc.chainlet;

import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "ssc/chainlet/chainlet_params.proto";
import "ssc/chainlet/chainlet_stack.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/sagaxyz/ssc/x/chainlet/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  rpc CreateChainletStack(MsgCreateChainletStack)
      returns (MsgCreateChainletStackResponse);
  rpc LaunchChainlet(MsgLaunchChainlet) returns (MsgLaunchChainletResponse);
  rpc UpdateChainletStack(MsgUpdateChainletStack)
      returns (MsgUpdateChainletStackResponse);
  rpc DisableChainletStackVersion(MsgDisableChainletStackVersion)
      returns (MsgDisableChainletStackVersionResponse);

  // this line is used by starport scaffolding # proto/tx/rpc
  rpc UpgradeChainlet(MsgUpgradeChainlet) returns (MsgUpgradeChainletResponse);
}
message MsgCreateChainletStack {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string displayName = 2;
  string description = 3;
  string image = 4;
  string version = 5;
  string checksum = 6;
  ChainletStackFees fees = 7 [ (gogoproto.nullable) = false ];
  bool ccvConsumer = 8;
}

message MsgCreateChainletStackResponse {}

message MsgLaunchChainlet {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string chainletName = 2;
  string chainId = 3;
  string chainletStackName = 4;
  string chainletStackVersion = 5;
  repeated string maintainers = 6;
  string denom = 7;
  ChainletParams params = 8 [ (gogoproto.nullable) = false ];
  bool disableAutomaticStackUpgrades = 9;
  bool isServiceChainlet = 10;
  repeated string tags = 11;
  string customLauncher = 12;
  repeated string customGenesisValidators = 13;
}

message MsgLaunchChainletResponse {}

message MsgUpdateChainletStack {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string displayName = 2;
  string image = 3;
  string version = 4;
  string checksum = 5;
  bool ccvConsumer = 6;
}

message MsgUpdateChainletStackResponse {}

message MsgDisableChainletStackVersion {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string displayName = 2;
  string version = 3;
}
message MsgDisableChainletStackVersionResponse {}

message MsgUpgradeChainlet {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string chainId = 2;
  string stackVersion = 3;
  uint64 heightDelta = 4;
}

message MsgUpgradeChainletResponse { uint64 height = 1; }
// this line is used by starport scaffolding # proto/tx/message

